--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "/dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "rm -rf dist/lib && tsc && tsc --build tsconfig.es5.json"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/trongthaonh/deepview-sdk/issues"
   },
-  "homepage": "https://github.com/trongthaonh/deepview-sdk#readme"
+  "homepage": "https://github.com/trongthaonh/deepview-sdk#readme",
+  "dependencies": {
+    "parcel": "^2.7.0",
+    "typescript": "^4.8.4"
+  }
 }
